Made up the markup of new products

--- a/kvast copy/index.html
+++ b/kvast copy/index.html
@@ -5,6 +5,65 @@
     <title>Кваст</title>
   </head>
   <body>
+    <div class="page-header">
+      <nav>
+        <a>
+            <img src="img/logo.png" width="" height="" alt="Логотип Кваста">
+        </a>
+        <ul>
+            <li><a href="#">История</a></li>
+            <li><a href="#">Производство</a></li>
+            <li><a href="#">Ассортимент</a></li>
+            <li><a href="#">Где купить</a></li>
+        </ul>
+    </nav>
+    <p>
+      Крафтовый квас<br>
+      всему голова!
+    </p>
+    </div>
+
+    <section>
+      <h2>Новинки</h2>
+        <h3>Вахтёр</h3>
+          <p> 
+            Алк. &lt; 1%<br>
+            Ккал 35<br>
+            <br>
+            Ржаной хлеб, Вода, Солод, Соль<br>
+            <br>
+            <img src="img/bottle-left.jpg">
+            <br>
+            Терпкий и мощный, вкус этого кваса взбодрит
+            после тяжёлого дня и придаст сил для вечерних
+            приключений!
+            </p>
+            <a href="#">Подробнее</a>
+            <a href="#"> Купить</a>
+            <span><b>150 Р.</b></span>
+            
+            <h3>Романтик</h3>
+            <p> 
+              Алк. &lt; 0.5%<br>
+              Ккал 27<br>
+              <br>
+              Ячменный хлеб, Вода, Солод, Апельсин<br>
+              <br>
+              <img src="img/bottle-right.jpg">
+              <br>
+              Лёгкий и освежающий напиток поможет
+              сохранять отличное настроение
+              в течение всего дня.
+            </p>
+              <a href="#">Подробнее</a>
+              <a href="#"> Купить</a>
+              <span><b>90 Р.</b></span>
+              
+  </section>
+    <div class= "page-footer">
+
+    </div>
+
 
   </body>
 </html>
