Made up a heder a little incorretly

--- a/site/index.html
+++ b/site/index.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Кваст</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="page-header">
-      <nav>
-        <a>
+      <div class="header-container">
+        <nav>
+          <a>
             <img src="img/logo.png" width="" height="" alt="Логотип Кваста">
-        </a>
-        <ul>
-            <li><a href="#">История</a></li>
-            <li><a href="#">Производство</a></li>
-            <li><a href="#">Ассортимент</a></li>
-            <li><a href="#">Где купить</a></li>
-        </ul>
-      </nav>
-      <p>
-      Крафтовый квас<br>
-      всему голова!
-      </p>
+          </a>
+            <ul>  
+              <li><a href="#">История</a></li>
+              <li><a href="#">Производство</a></li>
+              <li><a href="#">Ассортимент</a></li>
+              <li><a href="#">Где купить</a></li>
+          </ul>
+        </nav>
+        <p>
+        Крафтовый квас<br>
+        всему голова!
+        </p>
+      </div>
     </div>
 
     <section>
